--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -100,6 +100,115 @@
   }
 }
 
+.button__popup {
+  display: inline-block;
+}
+
+.button__link {
+  max-width: 220px;
+  background-color: $green;
+  color: #fff;
+  @extend %roboto-500;
+  padding: 16px 23px 17px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  cursor: pointer;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transition: all .3s;
+  display: inline-block;
+
+  &:hover {
+    background-color: transparent;
+    border: 1px solid $green;
+    color: $green;
+    filter: none;
+  }
+}
+
+.popup {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: transparent;
+  z-index: 60;
+  transition: all .3s;
+  opacity: 0;
+  visibility: hidden;
+
+  &.popup__active {
+    background-color: rgb(0, 0, 0, .8);
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__body {
+    margin: auto;
+    width: 400px;
+    height: 380px;
+    background-color: #F8F8F8;
+    padding: 60px 20px 60px;
+    border-radius: 20px;
+    text-align: center;
+    position: relative;
+  }
+
+  &__body-title {
+    font-size: 24px;
+    line-height: 28px;
+    color: $default;
+    @extend %raleway-500;
+    margin-bottom: 25px;
+  }
+
+  &__body-input {
+    padding: 14px 10px 13px;
+    border: 1px solid #C4C4C4;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    outline: none;
+    max-width: 360px;
+    width: 100%;
+
+    &::placeholder {
+      font-size: 18px;
+      line-height: 21px;
+      color: #353535;
+      @extend %raleway-500;
+    }
+
+    &:focus {
+      border: 1px solid $green;
+    }
+  }
+
+  &__send-button {
+    margin-top: 20px;
+  }
+
+  &__close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+    font-size: 24px;
+    transition: all .3s;
+
+    &:hover {
+      color: $green;
+    }
+  }
+}
+
+
+
 .services {
   padding-top: 50px;
   margin-bottom: 60px;
