fix adaptive header

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -6,13 +6,14 @@
     &__list {
       transform: translateY(-200%);
       position: absolute;
-      top: 120px;
+      top: 110px;
       width: 100%;
       left: 0;
       flex-direction: column;
       align-items: center;
       z-index: 5;
       transition: all .3s;
+      background-color: #fff;
 
       &.menu__list--active {
         transform: translateY(0%);
@@ -23,6 +24,10 @@
     &__list-item {
       width: 100%;
       text-align: center;
+
+      &:first-child {
+        padding-top: 10px;
+      }
     }
 
     &__list-link {
@@ -73,15 +78,24 @@
 }
 
 @media (max-width: 500px) {
+
+  .menu__list.menu__list--active {
+    padding-bottom: 140px;
+  }
+
   .phone__box {
     position: absolute;
-    top: 430px;
+    top: 420px;
     left: 50%;
-    margin-left: 24px;
     max-width: 200px;
     width: 100%;
+    background-color: #fff;
     transform: translateX(-300%);
     transition: all .3s;
+    max-width: 100%;
+    text-align: center;
+    z-index: 100;
+
 
     &.phone__box--active {
       transform: translate(-50%, -50%);
@@ -98,10 +112,14 @@
     &__socials {
       display: flex;
       position: absolute;
-      top: 500px;
+      top: 485px;
       left: 50%;
+      background-color: #fff;
       transform: translateX(300%);
       transition: all .3s;
+      width: 100%;
+      justify-content: center;
+      z-index: 100;
 
       &.socials--active {
         transform: translate(-50%, -50%);
