--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,3 +1,10 @@
+@media (max-width: 1200px) {
+  .header__bottom-img {
+    width: 400px;
+    height: 260px;
+  }
+}
+
 @media (max-width: 1080px) {
   .menu {
     order: 1;
@@ -18,6 +25,7 @@
       &.menu__list--active {
         transform: translateY(0%);
         transition: all .3s;
+        border-bottom: 1px solid $green;
       }
     }
 
@@ -72,18 +80,78 @@
     }
   }
 
-  .phone__box {
+  .phone__box.phone__box-header {
     margin-left: auto;
+  }
+
+  .services {
+    &__items {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
   }
 }
 
+@media (max-width: 920px) {
+  .header {
+    &__bottom-img {
+      width: 300px;
+      height: 200px;
+    }
+
+    &__bottom-descr {
+      font-size: 30px;
+      line-height: 36px;
+    }
+  }
+}
+
+@media (max-width: 760px) {
+  .header {
+    &__bottom-img {
+      display: none;
+    }
+
+    &__bottom-descr {
+      font-size: 30px;
+      line-height: 36px;
+    }
+
+    &__bottom-content {
+      margin-top: 90px;
+    }
+  }
+
+  .services {
+    &__items {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .socials.socials-footer {
+    order: 1;
+    margin: 40px auto 0;
+
+  }
+
+  .logo.logo-footer {
+    margin-right: 120px;
+  }
+}
+
+
 @media (max-width: 500px) {
+
+  .title {
+    padding-top: 60px;
+  }
 
   .menu__list.menu__list--active {
     padding-bottom: 140px;
   }
 
-  .phone__box {
+  .phone__box.phone__box-header {
     position: absolute;
     top: 420px;
     left: 50%;
@@ -95,7 +163,6 @@
     max-width: 100%;
     text-align: center;
     z-index: 100;
-
 
     &.phone__box--active {
       transform: translate(-50%, -50%);
@@ -109,6 +176,11 @@
   }
 
   .header {
+
+    &__inner {
+      margin-bottom: 30px;
+    }
+
     &__socials {
       display: flex;
       position: absolute;
@@ -126,9 +198,68 @@
         transition: all .3s;
       }
     }
+
+    &__bottom-descr {
+      font-size: 26px;
+      line-height: 32px;
+    }
+
+    &__bottom-content {
+      margin-top: 90px;
+    }
   }
 
   .socials-link {
     padding: 0 15px;
   }
+
+  .services {
+    margin-bottom: 30px;
+    padding-top: 30px;
+
+    &__items {
+      grid-template-columns: 1fr;
+      margin-bottom: 40px;
+    }
+  }
+
+  .photos-slider {
+    padding-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .logo.logo-footer {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 420px) {
+  .header {
+
+    &__bottom-content {
+      margin-top: 60px;
+    }
+  }
+
+  .popup {
+    &__body {
+      margin: auto 10px;
+      height: 365px;
+    }
+  }
+
+  .phone__box.phone__box-footer {
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  .logo.logo-footer {
+    margin: 0 auto;
+  }
+
+  .socials.socials-footer {
+    margin: 30px auto 0;
+  }
+
 }
