--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,7 +15,7 @@
   &__top {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 5px 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -25,9 +25,16 @@
     left: 0;
     background-color: #fff;
     z-index: 20;
+    border-bottom: 1px solid transparent;
+    transition: all .5s;
+  }
+
+  &__top--scroll {
+    transition: all .5s;
     border-bottom: 1px solid $green;
   }
-  &__socials{
+
+  &__socials {
     display: none;
   }
 }
@@ -233,7 +240,7 @@
     background-color: #F8F8F8;
     border-radius: 5px;
     @extend %raleway-500;
-    padding-left: 100px;
+    padding: 0 5px 0 100px;
     display: flex;
     align-items: center;
     position: relative;
@@ -741,6 +748,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     border-top: 1px solid #49D16A;
     padding: 20px 0;
   }
