--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -89,6 +89,33 @@
       grid-template-columns: 1fr 1fr 1fr;
     }
   }
+
+  .about {
+    &__inner {
+      display: block;
+    }
+
+    &__content {
+      max-width: 100%;
+      margin-bottom: 60px;
+    }
+
+    &__numbers {
+      justify-content: space-around;
+    }
+
+    &__video-popup {
+      margin: 0 auto;
+    }
+  }
+
+  .advantages {
+
+    &__items {
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 30px;
+    }
+  }
 }
 
 @media (max-width: 920px) {
@@ -103,10 +130,29 @@
       line-height: 36px;
     }
   }
+
+  .contacts {
+    &__inner {
+      display: block;
+    }
+
+    &__info {
+      max-width: 100%;
+      margin-bottom: 30px;
+    }
+
+    &__form {
+      max-width: 100%;
+    }
+  }
 }
 
 @media (max-width: 760px) {
   .header {
+    &__inner {
+      margin-bottom: 30px;
+    }
+
     &__bottom-img {
       display: none;
     }
@@ -122,24 +168,67 @@
   }
 
   .services {
+    padding-top: 30px;
+    margin-bottom: 30px;
+
     &__items {
       grid-template-columns: 1fr 1fr;
+      margin-bottom: 60px;
     }
   }
+
+  .photos-slider {
+    margin-bottom: 30px;
+  }
+
+  .advantages {
+    padding-top: 30px;
+  }
+
+  .contacts {
+    padding-top: 30px;
+  }
+
 }
 
 @media (max-width: 650px) {
   .socials.socials-footer {
     order: 1;
     margin: 40px auto 0;
-
   }
 
   .logo.logo-footer {
     margin-right: 120px;
   }
+
+  .about {
+
+    &__video-popup {
+      width: 100%;
+      min-height: 300px;
+      height: 100%;
+    }
+  }
 }
 
+@media (max-width: 575px) {
+  .advantages {
+
+    &__items {
+      grid-template-columns: 1fr;
+    }
+
+    &__item {
+      max-width: 100%;
+      min-height: 250px;
+    }
+
+    &__img {
+      display: block;
+      margin: 0 auto 30px;
+    }
+  }
+}
 
 @media (max-width: 500px) {
 
@@ -231,6 +320,18 @@
   .logo.logo-footer {
     margin-right: 0;
   }
+
+  .advantages {
+    padding-top: 30px;
+  }
+
+  .contacts {
+    padding: 10px 0 110px;
+
+    &__info {
+      padding: 40px 25px;
+    }
+  }
 }
 
 @media (max-width: 420px) {
@@ -262,4 +363,59 @@
     margin: 30px auto 0;
   }
 
+  .about {
+    padding-top: 30px;
+
+    &__video-popup {
+      min-height: 250px;
+
+      img {
+        height: 80px;
+      }
+    }
+
+    &__text-box {
+      margin-bottom: 60px;
+    }
+
+    &__numbers {
+      display: block;
+    }
+
+    &__num {
+      margin-bottom: 30px;
+
+      span {
+        margin: 0 auto;
+      }
+    }
+  }
+
+  .advantages {
+    &__items {
+      grid-gap: 20px;
+    }
+  }
+
+  .contacts {
+    &__info {
+      padding: 40px 15px;
+    }
+
+    &__info-box {
+      margin-bottom: 30px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .about {
+    &__video-popup {
+      min-height: 220px;
+    }
+  }
 }
