--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -221,8 +221,6 @@
   }
 }
 
-
-
 .services {
   padding-top: 50px;
   margin-bottom: 60px;
@@ -246,7 +244,6 @@
     position: relative;
   }
 }
-
 
 .services__item1::before {
   content: "";
@@ -375,7 +372,6 @@
   text-align: center;
 }
 
-
 .photos-slider {
   padding-top: 60px;
   margin-bottom: 60px;
@@ -392,7 +388,6 @@
     cursor: pointer;
     position: relative;
     transition: all .3s;
-
 
     &::after {
       content: "";
@@ -491,7 +486,6 @@
   background: url('../images/arrow-right.svg') 0 0 no-repeat;
 }
 
-
 .about {
   padding-top: 70px;
 
@@ -547,6 +541,9 @@
 
   &__video-popup {
     background-image: url('../images/video-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     width: 500px;
     height: 500px;
     display: flex;
@@ -577,8 +574,8 @@
   padding-top: 70px;
 
   &__items {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 
   &__item {
@@ -590,6 +587,7 @@
     border-radius: 20px;
     padding: 35px 15px 30px;
     transition: all .3s;
+    margin: 0 auto;
 
     &:hover {
       transform: translateY(-5px);
@@ -640,18 +638,23 @@
     background-color: #F8F8F8;
     padding: 40px 50px;
     letter-spacing: 0.6px;
+    margin-right: 30px;
   }
 
-  &__info-box {
+  &__info-wrapper {
     max-width: 350px;
   }
 
-  &__info-text {
+  &__info-box {
     margin-bottom: 60px;
 
     &:last-child {
       margin-bottom: 20px;
     }
+  }
+
+  &__info-text {
+    margin-bottom: 5px;
   }
 
   &__form {
@@ -771,7 +774,6 @@
     }
   }
 }
-
 
 
 @import 'media';
