--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,6 +12,10 @@
     margin-bottom: 60px;
   }
 
+  &__inner.header__inner-photos {
+    margin-bottom: 0;
+  }
+
   &__top {
     max-width: 1200px;
     margin: 0 auto;
@@ -50,6 +54,7 @@
 
   &__list-item {
     padding: 0 20px;
+
   }
 
   &__list-link {
@@ -71,6 +76,7 @@
   margin-bottom: 2px;
   display: inline-block;
   position: relative;
+  transition: all .3s;
 
   &::before {
     position: absolute;
@@ -81,6 +87,10 @@
     height: 24px;
     left: -30px;
     top: 4px;
+  }
+
+  &:hover {
+    color: #4EBD69;
   }
 }
 
@@ -151,6 +161,25 @@
   opacity: 0;
   visibility: hidden;
 
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(51, 51, 51, 0.8) url("../images/spinner.gif") center / 150px no-repeat;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+    z-index: 100;
+  }
+
+  &._sending::after {
+    opacity: 1;
+    visibility: visible;
+  }
+
   &.popup__active {
     background-color: rgb(0, 0, 0, .8);
     opacity: 1;
@@ -201,6 +230,10 @@
     &:focus {
       border: 1px solid $green;
     }
+  }
+
+  &__body-input._error {
+    border-color: #FB5F5F;
   }
 
   &__send-button {
@@ -427,6 +460,7 @@
 
   &__img {
     max-width: 330px;
+    width: 100%;
     max-height: 260px;
     object-fit: cover;
   }
@@ -576,6 +610,7 @@
   &__items {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 15px;
   }
 
   &__item {
@@ -612,6 +647,7 @@
     @extend %roboto-500;
     color: #fff;
     max-width: 200px;
+    width: 100%;
     margin-bottom: 15px;
     display: inline-block;
   }
@@ -705,8 +741,9 @@
   }
 
   &__form-input._error {
-    border-color: red;
+    border-color: #FB5F5F;
   }
+
 
   &__form-textarea {
     font-size: 18px;
@@ -775,5 +812,77 @@
   }
 }
 
+.photos-item {
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__text-box {
+    max-width: 550px;
+    width: 100%;
+    margin-right: 70px;
+  }
+
+  &__text {
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 15px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__slider {
+    max-width: 450px;
+    width: 100%;
+    max-height: 375px;
+    margin-right: 40px;
+  }
+
+  &__slider-box {
+    max-width: 450px;
+    width: 100%;
+    max-height: 375px;
+  }
+
+  &__slider-img {
+    max-width: 450px;
+    width: 100%;
+    max-height: 375px;
+    object-fit: cover;
+    background-position: center center;
+  }
+}
+
+
+.photos-item {
+
+  .slick-arrow {
+    position: absolute;
+    top: 50%;
+    margin: -20px 0 0 0;
+    z-index: 10;
+    font-size: 0;
+    border: none;
+    width: 20px;
+    height: 36px;
+    cursor: pointer;
+  }
+
+
+  .slick-prev {
+    left: -40px;
+    background: url('../images/slider/arrow-left.svg') 0 0 no-repeat;
+  }
+
+  .slick-next {
+    right: -40px;
+    background: url('../images/slider/arrow-right.svg') 0 0 no-repeat;
+  }
+
+}
 
 @import 'media';
