--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -70,11 +70,13 @@
       align-items: center;
       padding: 0;
       position: relative;
+      
 
       span {
         width: 100%;
         height: 3px;
         background-color: $default;
+        transition: all .3s;
       }
 
       &::after,
@@ -84,6 +86,7 @@
         width: 100%;
         height: 3px;
         background-color: $default;
+        transition: all .3s;
       }
 
       &::before {
@@ -92,6 +95,26 @@
 
       &::after {
         bottom: 0;
+      }
+    }
+  }
+
+  .menu.menu--active {
+    .menu__btn {
+      span {
+        display: none;
+      }
+
+      &::before {
+        transform: rotate(45deg);
+        top: 11px;
+        width: 34px;
+      }
+
+      &::after {
+        transform: rotate(-45deg);
+        bottom: 10px;
+        width: 34px;
       }
     }
   }
@@ -339,8 +362,8 @@
     }
   }
 
-  .header__photos-item{
-    .header__socials{
+  .header__photos-item {
+    .header__socials {
       top: 420px;
     }
   }
