--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -842,7 +842,6 @@
   &__text-box {
     max-width: 550px;
     width: 100%;
-    margin-right: 70px;
   }
 
   &__text {
@@ -859,7 +858,7 @@
     max-width: 450px;
     width: 100%;
     max-height: 375px;
-    margin-right: 40px;
+    margin-left: 40px;
   }
 
   &__slider-box {
